src/test/ui/coherence/coherence-blanket-conflicts-with-specific-multidispatch.old.stderr
error[E0119]: conflicting implementations of trait `MyTrait<MyType>` for type `MyType`:
  --> $DIR/coherence-blanket-conflicts-with-specific-multidispatch.rs:26:1
   |
LL | impl<T> MyTrait<T> for T {
   | ------------------------ first implementation here
...
LL | impl MyTrait<MyType> for MyType {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MyType`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
